# WASM-Virtualizer

./: Cargo.toml  README.md  build_rs_cov.profraw
src/: lib.rs
src/tests/: mod.rs
