[package]
name = "wasm_virtualizer"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-test = "0.3"
serde = { version = "1.0", features = ["derive"] }  # Added serde with derive feature
serde-wasm-bindgen = "0.4"
criterion = { version = "0.5", features = ["html_reports"] }